# fastapi_haute_performance_gdelt

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_PRO.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  run_ingest_once.py  run_scheduler.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_ingestion_batches.py
app/: main.py  schemas.py  tasks.py  worker.py
app/api/v1/: analytics.py  routes.py
app/core/: config.py  logging.py  metrics.py
app/domain/: gdelt_events_schema.py
app/infra/: db.py  duckdb_engine.py  fs_lake.py  models.py  s3.py
app/services/: duckdb_queries.py  gdelt.py  ingest.py  query.py
bench/: README.md  k6-search.js  k6-smoke.js  locustfile.py
docs/: ARCHITECTURE.md  LINKEDIN_POST.md
tests/: test_health.py
