[tool.poetry]
name = "fastapi-gdelt-industrial"
version = "0.1.0"
description = "FastAPI haute performance POC -> industriel avec ingestion GDELT big data"
authors = ["RANOELISON Dimbisoa Patrick <patdimby@outlook.fr>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

fastapi = "0.128.6"
uvicorn = { extras = ["standard"], version = "0.40.0" }

pydantic-settings = "2.12.0"
pydantic = "2.12.5"

httpx = "0.28.1"
tenacity = "9.1.4"
certifi = "2026.1.4"

python-json-logger = "4.0.0"
prometheus-client = "0.24.1"

duckdb = "1.4.4"
pyarrow = "23.0.0"
pandas = "3.0.0"

# Si tu utilises Postgres/Redis/worker (arq) dans le repo:
sqlalchemy = "2.0.46"
asyncpg = "0.31.0"
redis = "5.3.1"
arq = "0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "0.24.0"
ruff = "0.6.8"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
